<resources>
    <string name="app_name">JAVE-PR10-FCT</string>
    <string name="main_btnEdit_text">Editar</string>
    <string name="main_btnDelete_text">Eliminar</string>
    <string name="alumno_btnDelete_text">Eliminar</string>
    <string name="alumno_btnEdit_text">Editar</string>
    <string name="main_lblName_text">Alumno</string>
    <string name="main_lblEmail_text">Email</string>
    <string name="main_txtName_autofillHints">Nombre del alumno</string>
    <string name="main_txtName_hint">Nombre del alumno</string>
    <string name="main_txtEmail_autofillHints">Email del alumno</string>
    <string name="main_txtEmail_hint">Email del alumno</string>
    <string name="main_lblPhonenumber_text">Teléfono</string>
    <string name="main_imgEmail_desc">Email imagen</string>
    <string name="main_imgPhonenumber_desc">Telefono imagen</string>
    <string name="main_txtPhonenumber_autofillHints">Teléfono del alumno</string>
    <string name="main_txtPhonenumber_hint">Teléfono del alumno</string>
    <string name="empresa_btnEdit_text">Editar</string>
    <string name="empresa_txtName_autofillHints">Nombre de la empresa</string>
    <string name="empresa_txtName_hint">Nombre de la empresa</string>
    <string name="empresa_txtEmail_autofillHints">Email de la empresa</string>
    <string name="empresa_txtEmail_hint">Email de la empresa</string>
    <string name="empresa_txtPhonenumber_autofillHints">Teléfono de la empresa</string>
    <string name="empresa_txtPhonenumber_hint">Teléfono de la empresa</string>
    <string name="empresa_lblAddress_text">Dirección</string>
    <string name="main_imgAddress_desc">Imagen dirección</string>
    <string name="empresa_txtAddress_autofillHints">Dirección de la empresa</string>
    <string name="empresa_txtAddress_hint">Dirección de la empresa</string>
    <string name="main_lblCIF_text">CIF</string>
    <string name="empresa_txtCIF_autofillHints">CIF de la empresa</string>
    <string name="empresa_txtCIF_hint">CIF de la empresa</string>
    <string name="main_lblContact_text">Persona de contacto</string>
    <string name="empresa_txtContact_autofillHints">Nombre de la persona</string>
    <string name="empresa_txtContact_hint">Nombre de la persona</string>
    <string name="txt_navAlumnos">Alumnos</string>
    <string name="txt_navEmpresas">Empresas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_invalid_data">Formato no válido</string>
    <string name="main_lblCurso_text">Curso</string>
    <string name="main_txtCurso_autofillHints">Curso del alumno</string>
    <string name="main_txtCurso_hint">Curso del alumno</string>
    <string name="main_lblEmpresa_text">Empresa</string>
    <string name="main_lblTutor_text">Tutor</string>
    <string name="main_lblNameTutor_text">Nombre del tutor</string>
    <string name="main_txtNameTutor_autofillHints">Nombre del tutor</string>
    <string name="main_txtNameTutor_hint">Nombre del tutor</string>
    <string name="main_lblPhoneTutor_text">Teléfono del tutor</string>
    <string name="main_txtPhonenumberTutor_autofillHints">Teléfono del tutor</string>
    <string name="main_txtPhonenumberTutor_hint">Teléfono del tutor</string>
    <string name="main_spHorarioTutor_text">Horario del tutor</string>
    <string name="visita_btnEdit_text">Editar</string>
    <string name="visita_btnHoraFin_text">Fin</string>
    <string name="visita_btnDia_text">Día</string>
    <string name="visita_btnHoraInicio_text">Inicio</string>
    <string name="visita_lblComentarios_text">Comentarios</string>
    <string name="txt_navVisitas">Visitas</string>
    <string name="visita_lblDia_text">Fecha</string>
    <string name="visita_lblHoraInicio_text">Hora de inicio</string>
    <string name="visita_lblHoraFin_text">Hora de finalización</string>
    <string name="proxima_btnRealizar_text">Visitar</string>
    <string name="txt_navProximas">Próximas visitas</string>
    <string name="main_required_field">Campo requerido</string>
    <string name="main_no_company_yet">No hay compañías</string>
    <string name="main_no_students_yet">No hay alumnos</string>
    <string name="main_no_visits_yet">Ninguna visita realizada</string>
    <string name="preferencias_title">Settings</string>
    <string name="main_no_future_visits_yet">No hay visitas programadas</string>
    <string name="lstPref_title">Pantalla principal</string>
    <string name="lstPref_summary">Próximas visitas</string>
    <string name="lstPref_default">proximas</string>
    <string name="lstKey">listpref</string>
    <string name="deshacer">Deshacer</string>
    <string name="info_desarrollador_txt">Desarrollador</string>
</resources>
