<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/alumnosFragment"
            android:title="@string/txt_navAlumnos" />
        <item
            android:id="@+id/empresasFragment"
            android:title="@string/txt_navEmpresas" />
        <item
            android:id="@+id/visitasFragment"
            android:title="@string/txt_navVisitas" />
        <item
            android:id="@+id/proximasFragment"
            android:title="@string/txt_navProximas" />
    </group>

    <item
        android:title="Información">
        <menu>
            <item
                android:id="@+id/infoFragment"
                android:title="@string/info_desarrollador_txt" />
        </menu>
    </item>
</menu>